--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
        " ('person 1', '2016-10-22', 'bar 19', 'drink 42', 2)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -658,7 +658,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42    2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -754,7 +754,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42         2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
        "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,6 +1006,27 @@
     }
    },
    "source": [
+    "### Aggregate Functions\n",
+    "\n",
+    "- SQL is excellent at aggregating data the way you might in a pivot table in Excel. \n",
+    "- You will use aggregate functions all the time, so it's important to get comfortable with them. \n",
+    "- You know the functions1 They are the same ones you will find in Excel or any other analytics program. \n",
+    "- The most important functions are:\n",
+    "\n",
+    "    - `COUNT` counts how many rows are in a particular column.\n",
+    "    - `SUM` adds together all the values in a particular column.\n",
+    "    - `MIN` and MAX return the lowest and highest values in a particular column, respectively.\n",
+    "    - `AVG` calculates the average of a group of selected values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Let's work through some problems\n",
     "\n",
     "### Question 1:\n",
@@ -1020,10 +1041,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Get the bar name and average price of drinks at each bar.\n",
+    "<table style=\"border: 5px; width: 100%\">\n",
+    " <tr>\n",
+    "    <td><b style=\"font-size:30px\">menu_items</b></td>\n",
+    "    <td><b style=\"font-size:30px\">orders</b></td>\n",
+    "    <td><b style=\"font-size:30px\">drinks</b></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>type</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>price</b>: real</td>\n",
+    "    <td style=\"font-size:20px\"><b>person</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>date</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>quantity</b>: integer</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "query= \"\"\"\n",
@@ -1053,15 +1124,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the bar name and average price of drinks at each bar.\n",
+    "<table style=\"border: 5px; width: 100%\">\n",
+    " <tr>\n",
+    "    <td><b style=\"font-size:30px\">menu_items</b></td>\n",
+    "    <td><b style=\"font-size:30px\">orders</b></td>\n",
+    "    <td><b style=\"font-size:30px\">drinks</b></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>type</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>price</b>: real</td>\n",
+    "    <td style=\"font-size:20px\"><b>person</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>date</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>quantity</b>: integer</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "query= \"\"\"\n",
@@ -1086,6 +1207,45 @@
     "Reminder - our database:\n",
     "\n",
     "<img src='our-db.png' width=400 align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the bar name and average price of drinks at each bar.\n",
+    "<table style=\"border: 5px; width: 100%\">\n",
+    " <tr>\n",
+    "    <td><b style=\"font-size:30px\">menu_items</b></td>\n",
+    "    <td><b style=\"font-size:30px\">orders</b></td>\n",
+    "    <td><b style=\"font-size:30px\">drinks</b></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>type</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>price</b>: real</td>\n",
+    "    <td style=\"font-size:20px\"><b>person</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>date</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>quantity</b>: integer</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    "</table>"
    ]
   },
   {
@@ -1128,6 +1288,45 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the bar name and average price of drinks at each bar.\n",
+    "<table style=\"border: 5px; width: 100%\">\n",
+    " <tr>\n",
+    "    <td><b style=\"font-size:30px\">menu_items</b></td>\n",
+    "    <td><b style=\"font-size:30px\">orders</b></td>\n",
+    "    <td><b style=\"font-size:30px\">drinks</b></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>type</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>price</b>: real</td>\n",
+    "    <td style=\"font-size:20px\"><b>person</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>date</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>quantity</b>: integer</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    "</table>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1157,6 +1356,45 @@
     "Reminder - our database:\n",
     "\n",
     "<img src='our-db.png' width=400 align='left'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get the bar name and average price of drinks at each bar.\n",
+    "<table style=\"border: 5px; width: 100%\">\n",
+    " <tr>\n",
+    "    <td><b style=\"font-size:30px\">menu_items</b></td>\n",
+    "    <td><b style=\"font-size:30px\">orders</b></td>\n",
+    "    <td><b style=\"font-size:30px\">drinks</b></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>drink_id</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>bar</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"><b>type</b>: string</td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"><b>price</b>: real</td>\n",
+    "    <td style=\"font-size:20px\"><b>person</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>date</b>: string</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    " <tr>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    "    <td style=\"font-size:20px\"><b>quantity</b>: integer</td>\n",
+    "    <td style=\"font-size:20px\"></td>\n",
+    " </tr>\n",
+    "</table>"
    ]
   },
   {
