--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "- How do the different tables relate to each other?\n",
     "- Arguably most difficult part of relational databases is designing the schema\n",
-    "    - Less of a concern for data scientists — not our job!\n",
+    "    - \"Less of a concern for data scientists — not our job!\"\n",
     "- For our purposes, useful to understand table structure of a database to know how to write our queries (e.g. what tables to join)\n",
     "- Common design principles\n",
     "    - Star schema\n",
@@ -303,7 +303,7 @@
     "## Make sure you've installed Postgres...\n",
     "\n",
     "1. Install PostGreSQL: https://www.datacamp.com/community/tutorials/installing-postgresql-windows-macosx\n",
-    "* From your terminal: `pip install psycopg2`\n",
+    "* From your terminal: `conda install psycopg2`, `pip install psycopg2-binary`\n",
     "* Open a jupyter notebook and run `import psycopg2`to make sure it works \n",
     "\n",
     "To get a database going: \n",
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -387,7 +387,7 @@
     "\n",
     "Database schema:\n",
     "\n",
-    "* has_on_menu(<em><ins>bar</ins></em>: string, <em><ins>drink_id</ins></em>: string, <em><ins>price</ins></em>: real)\n",
+    "* has_on_menu(<em><ins>bar</ins></em>: string,   <em><ins>drink_id</ins></em>: string, <em><ins>price</ins></em>: real)\n",
     "\n",
     "\n",
     "* orders(<em><ins>person</ins></em>: string, <em><ins>date</ins></em>: string, bar, <em><ins>drink_id</ins></em>: string, quantity: integer)\n",
@@ -410,7 +410,17 @@
     "    - Filtering, ordering, limiting, etc.\n",
     "    - Joining tables\n",
     "    - Grouping records\n",
-    "    - Aggregate functions\n",
+    "    - Aggregate functions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "\n",
     "#### Requirements:\n",
     "- Install PostgreSQL (and potentially give the postgres user a password)\n",
@@ -418,7 +428,17 @@
     "    - Using conda: conda install -c anaconda psycopg2\n",
     "    - Using pip: pip install psycopg2\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "#### Creating the database using psql\n",
     "- Start up your terminal.\n",
     "- Start the psql shell tool. \\ psql\n",
@@ -442,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -451,21 +471,21 @@
    "outputs": [],
    "source": [
     "# make necessary imports and set up environmental variables\n",
-    "import psycopg2\n",
+    "#import psycopg2\n",
     "import pandas as pd\n",
     "\n",
-    "postgres_pwd = cfg.postgres['password']"
+    "#postgres_pwd = cfg.postgres['password']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# connect to the database\n",
-    "con = psycopg2.connect(database='drinks', user='postgres', password=postgres_pwd,\n",
-    "                       host='127.0.0.1', port='5432')\n",
+    "#con = psycopg2.connect(database='drinks', user='postgres', password=postgres_pwd,\n",
+    " #                      host='127.0.0.1', port='5432')\n",
     "\n",
     "query = con.cursor()"
    ]
@@ -485,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -521,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +554,7 @@
        " ('person 1', '2016-10-22', 'bar 19', 'drink 42', 2)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
