--- a/W10D2/W10D2_RecommendationEngines2.ipynb
+++ b/W10D2/W10D2_RecommendationEngines2.ipynb
@@ -27,7 +27,7 @@
     "### W10D2 Recommendation Engines II\n",
     "\n",
     "Instructor: Socorro Dominguez  \n",
-    "November 10, 2020"
+    "March 09, 2021"
    ]
   },
   {
@@ -470,7 +470,7 @@
     }
    },
    "source": [
-    "- From empirical evidence, it seems that item-to-item approach usually performs better. Why?"
+    "- Which one do you think will perform better. Why?"
    ]
   },
   {
@@ -511,16 +511,9 @@
     }
    },
    "source": [
-    "- We've seen that if we had the user profile, we can learn the movie profile $\\hat{X}$ s.t.:\n",
-    "$$\n",
-    "    Y \\approx \\hat{X}\\beta\n",
-    "$$\n",
+    "- We've seen that if we had the user profile, we can learn the movie profile $\\hat{X}$ \n",
     "\n",
-    "\n",
-    "- Or if we had the movie profile, we could learn the user profile $\\hat{\\beta}$ s.t.:\n",
-    "$$\n",
-    "    Y \\approx X\\hat{\\beta}\n",
-    "$$"
+    "- Or if we had the movie profile, we could learn the user profile $\\hat{\\beta}$"
    ]
   },
   {
@@ -559,9 +552,7 @@
     "$$\n",
     "where $u_{ij}=1$ if User $i$ has provided a rating for movie $j$, and 0 otherwise;\n",
     "\n",
-    "- Again, you can use different minimization algorithms here, (e.g., SGD).\n",
-    "\n",
-    "- Question: Why is the term $u_{ij}$ important?"
+    "- Again, you can use different minimization algorithms here, (e.g., SGD).\n"
    ]
   },
   {
@@ -851,7 +842,8 @@
    "source": [
     "# SVD Demo\n",
     "\n",
-    "Performs linear dimensionality reduction by means of truncated singular value decomposition (SVD).This estimator does not center the data before computing the singular value decomposition. This means it can work with sparse matrices efficiently."
+    "Performs linear dimensionality reduction by means of truncated singular value decomposition (SVD).  \n",
+    "This estimator does not center the data before computing the singular value decomposition. This means it can work with sparse matrices efficiently."
    ]
   },
   {
@@ -896,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -914,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -997,7 +989,7 @@
        "4       1       50     5.0  964982931"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1009,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1094,7 +1086,7 @@
        "5                                             Comedy  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1122,7 +1114,7 @@
     "    n = len(set(ratings[item_key]))\n",
     "    d = len(set(ratings[user_key]))\n",
     "    print(\"Number of users:\", d)\n",
-    "    print(\"Number of items:\", n)\n",
+    "    #print(\"Number of items:\", n)\n",
     "    print(\"Fraction nonzero:\", len(ratings)/(n*d))\n",
     "    print(\"Size of full X matrix (GB):\", (n*d)*8/1e9)\n",
     "\n",
@@ -1131,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1178,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1199,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1216,20 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "nn_euc = find_nearestneighbour(NearestNeighbors(n_neighbors=6), movie_X, 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1243,7 +1222,6 @@
       "Number of ratings: 100836\n",
       "The average rating: 3.501556983616962\n",
       "Number of users: 610\n",
-      "Number of items: 9724\n",
       "Fraction nonzero: 0.016999683055613623\n",
       "Size of full X matrix (GB): 0.04745312\n"
      ]
@@ -1255,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -1268,7 +1246,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 20,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2353,  546,  615, 1756,  622])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn_euc = find_nearestneighbour(NearestNeighbors(n_neighbors=6), movie_X, 0)\n",
+    "nn_euc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1282,7 +1285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1306,11 +1309,11 @@
       "\n",
       "\n",
       "SVD(k=100): \n",
-      "\tMission: Impossible (1996)                         Total stars: 573.0\n",
       "\tToy Story 2 (1999)                                 Total stars: 374.5\n",
       "\tIndependence Day (a.k.a. ID4) (1996)               Total stars: 696.0\n",
+      "\tMission: Impossible (1996)                         Total stars: 573.0\n",
       "\tTwister (1996)                                     Total stars: 408.5\n",
-      "\tMask, The (1994)                                   Total stars: 500.0\n",
+      "\tWilly Wonka & the Chocolate Factory (1971)         Total stars: 461.0\n",
       "\n",
       "\n",
       "\n",
