--- a/W04D3/W04D3_intro_to_ml_and_lr.ipynb
+++ b/W04D3/W04D3_intro_to_ml_and_lr.ipynb
@@ -8,8 +8,8 @@
     }
    },
    "source": [
-    "## Lighthouse Labs\n",
-    "### W02D2 Machine Learning & Linear Regression\n",
+    "#### Lighthouse Labs\n",
+    "### W04D3 Machine Learning & Linear Regression\n",
     "\n",
     "Instructor: Socorro Dominguez  \n",
     "March 24, 2021"
