--- a/W04D3/W04D3_intro_to_ml_and_lr.ipynb
+++ b/W04D3/W04D3_intro_to_ml_and_lr.ipynb
@@ -961,6 +961,17 @@
     }
    },
    "source": [
+    "![img](https://miro.medium.com/max/2250/1*_7OPgojau8hkiPUiHoGK_w.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Linear Regression 101\n",
     "\n",
     "- Linear regression is one of the most basic and popular ML/statistical techniques.\n",
