--- a/W01D3/W01D3_APIs.ipynb
+++ b/W01D3/W01D3_APIs.ipynb
@@ -11,7 +11,7 @@
     "## Lighthouse Labs\n",
     "### W01D3 APIs\n",
     "Instructor: Socorro Dominguez  \n",
-    "March 03, 2021"
+    "April 28, 2021"
    ]
   },
   {
@@ -23,7 +23,7 @@
    },
    "source": [
     "**Agenda:**\n",
-    "\n",
+    "* Introductions\n",
     "* APIs\n",
     "    * What is it?\n",
     "    * Applications\n",
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -300,9 +300,17 @@
     "* message format for requests and responses\n",
     "* usually in both XML and JSON\n",
     "* registration and authentication\n",
-    "* usually using OAuth (delegated authorization framework for REST/APIs. It enables apps to obtain limited access to a user's data without giving away a user's password.)\n",
-    "\n",
-    "\n",
+    "* usually using OAuth (delegated authorization framework for REST/APIs. It enables apps to obtain limited access to a user's data without giving away a user's password.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Language integration\n",
     "* might be provided or you might have to do it yourself\n",
     "* if provided, usually someone other than data source\n",
@@ -361,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -377,67 +385,67 @@
        "  'RouteMap': {'Href': 'https://nb.translink.ca/geodata/099.kmz'},\n",
        "  'Schedules': [{'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '10:31pm 2021-02-27',\n",
+       "    'ExpectedLeaveTime': '11:16am',\n",
        "    'ExpectedCountdown': -2,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '11:08:03 pm'},\n",
+       "    'LastUpdate': '12:08:02 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '10:41pm 2021-02-27',\n",
-       "    'ExpectedCountdown': 8,\n",
+       "    'ExpectedLeaveTime': '11:21am',\n",
+       "    'ExpectedCountdown': 3,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '11:08:03 pm'},\n",
-       "   {'Pattern': 'E8FL2',\n",
-       "    'Destination': 'TO BOUNDARY B-LINE',\n",
-       "    'ExpectedLeaveTime': '10:51pm 2021-02-27',\n",
-       "    'ExpectedCountdown': 18,\n",
-       "    'ScheduleStatus': '*',\n",
-       "    'CancelledTrip': False,\n",
-       "    'CancelledStop': False,\n",
-       "    'AddedTrip': False,\n",
-       "    'AddedStop': False,\n",
-       "    'LastUpdate': '11:08:03 pm'},\n",
+       "    'LastUpdate': '12:08:02 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:01pm 2021-02-27',\n",
-       "    'ExpectedCountdown': 28,\n",
+       "    'ExpectedLeaveTime': '11:25am',\n",
+       "    'ExpectedCountdown': 7,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '11:08:03 pm'},\n",
+       "    'LastUpdate': '12:08:02 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:11pm 2021-02-27',\n",
-       "    'ExpectedCountdown': 38,\n",
+       "    'ExpectedLeaveTime': '11:30am',\n",
+       "    'ExpectedCountdown': 12,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 am'},\n",
+       "    'LastUpdate': '12:08:02 pm'},\n",
        "   {'Pattern': 'E1',\n",
        "    'Destination': \"COMM'L-BDWAY STN\",\n",
-       "    'ExpectedLeaveTime': '11:21pm 2021-02-27',\n",
-       "    'ExpectedCountdown': 48,\n",
+       "    'ExpectedLeaveTime': '11:34am',\n",
+       "    'ExpectedCountdown': 16,\n",
        "    'ScheduleStatus': '*',\n",
        "    'CancelledTrip': False,\n",
        "    'CancelledStop': False,\n",
        "    'AddedTrip': False,\n",
        "    'AddedStop': False,\n",
-       "    'LastUpdate': '12:08:02 am'}]}]"
+       "    'LastUpdate': '12:08:02 pm'},\n",
+       "   {'Pattern': 'E1',\n",
+       "    'Destination': \"COMM'L-BDWAY STN\",\n",
+       "    'ExpectedLeaveTime': '11:38am',\n",
+       "    'ExpectedCountdown': 20,\n",
+       "    'ScheduleStatus': '*',\n",
+       "    'CancelledTrip': False,\n",
+       "    'CancelledStop': False,\n",
+       "    'AddedTrip': False,\n",
+       "    'AddedStop': False,\n",
+       "    'LastUpdate': '12:08:02 pm'}]}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,12 +459,13 @@
     "apikey = cfg.translink['key']\n",
     "#In the Walkthrough, you will learn how to hide your API keys using Environmental Variables.\n",
     "\n",
-    "requests.get('http://api.translink.ca/rttiapi/v1/stops/61935/estimates?apikey={}'.format(apikey),headers={'accept': 'application/JSON'}).json()"
+    "requests.get('http://api.translink.ca/rttiapi/v1/stops/61935/estimates?apikey={}'.format(apikey),headers={'accept': 'application/JSON'}).json()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -475,7 +484,7 @@
         "Longitude": -122.845818,
         "Name": "SB KING GEORGE BLVD FS 98 AVE",
         "OnStreet": "KING GEORGE BLVD",
-        "Routes": "314, 321",
+        "Routes": "314, 321, 329",
         "StopNo": 54997,
         "WheelchairAccess": 1
        },
@@ -488,7 +497,7 @@
         "Longitude": -122.850708,
         "Name": "EB 96 AVE FS 134 ST",
         "OnStreet": "96 AVE",
-        "Routes": "314",
+        "Routes": "314, 329",
         "StopNo": 54986,
         "WheelchairAccess": 0
        },
@@ -501,7 +510,7 @@
         "Longitude": -122.851791,
         "Name": "WB 96 AVE FS 134 ST",
         "OnStreet": "96 AVE",
-        "Routes": "314",
+        "Routes": "314, 329",
         "StopNo": 54999,
         "WheelchairAccess": 0
        },
@@ -527,7 +536,7 @@
         "Longitude": -122.847,
         "Name": "WB 96 AVE FS KING GEORGE BLVD",
         "OnStreet": "96 AVE",
-        "Routes": "314",
+        "Routes": "314, 329",
         "StopNo": 54998,
         "WheelchairAccess": 1
        },
@@ -540,7 +549,7 @@
         "Longitude": -122.845421,
         "Name": "NB KING GEORGE BLVD FS 96 AVE",
         "OnStreet": "KING GEORGE BLVD",
-        "Routes": "314, 321, 326, R1",
+        "Routes": "314, 321, 326, 329, 394, R1",
         "StopNo": 54988,
         "WheelchairAccess": 1
        },
@@ -553,7 +562,7 @@
         "Longitude": -122.845184,
         "Name": "KING GEORGE STN BAY 4",
         "OnStreet": "KING GEORGE STN",
-        "Routes": "314, 321, 326, 502, 503, R1",
+        "Routes": "314, 321, 326, 329, 395, 502, 503, R1",
         "StopNo": 59339,
         "WheelchairAccess": 1
        },
@@ -566,7 +575,7 @@
         "Longitude": -122.845703,
         "Name": "KING GEORGE STN BAY 1     ",
         "OnStreet": "KING GEORGE STN",
-        "Routes": "314, 321, 326, R1",
+        "Routes": "314, 321, 326, 329, R1",
         "StopNo": 54996,
         "WheelchairAccess": 1
        },
@@ -605,7 +614,7 @@
         "Longitude": -122.845139,
         "Name": "KING GEORGE STN BAY 2",
         "OnStreet": "KING GEORGE STN",
-        "Routes": "",
+        "Routes": "345, 394",
         "StopNo": 54990,
         "WheelchairAccess": 1
        },
@@ -640,7 +649,7 @@
        "<IPython.core.display.JSON object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {
       "application/json": {
        "expanded": false,
@@ -659,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -672,7 +681,7 @@
        "'SB KING GEORGE BLVD FS 98 AVE'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,6 +694,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -772,9 +782,50 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\r\n",
+      "  \"login\": \"sedv8808\",\r\n",
+      "  \"id\": 42593920,\r\n",
+      "  \"node_id\": \"MDQ6VXNlcjQyNTkzOTIw\",\r\n",
+      "  \"avatar_url\": \"https://avatars.githubusercontent.com/u/42593920?v=4\",\r\n",
+      "  \"gravatar_id\": \"\",\r\n",
+      "  \"url\": \"https://api.github.com/users/sedv8808\",\r\n",
+      "  \"html_url\": \"https://github.com/sedv8808\",\r\n",
+      "  \"followers_url\": \"https://api.github.com/users/sedv8808/followers\",\r\n",
+      "  \"following_url\": \"https://api.github.com/users/sedv8808/following{/other_user}\",\r\n",
+      "  \"gists_url\": \"https://api.github.com/users/sedv8808/gists{/gist_id}\",\r\n",
+      "  \"starred_url\": \"https://api.github.com/users/sedv8808/starred{/owner}{/repo}\",\r\n",
+      "  \"subscriptions_url\": \"https://api.github.com/users/sedv8808/subscriptions\",\r\n",
+      "  \"organizations_url\": \"https://api.github.com/users/sedv8808/orgs\",\r\n",
+      "  \"repos_url\": \"https://api.github.com/users/sedv8808/repos\",\r\n",
+      "  \"events_url\": \"https://api.github.com/users/sedv8808/events{/privacy}\",\r\n",
+      "  \"received_events_url\": \"https://api.github.com/users/sedv8808/received_events\",\r\n",
+      "  \"type\": \"User\",\r\n",
+      "  \"site_admin\": false,\r\n",
+      "  \"name\": \"Socorro Dominguez Vidana\",\r\n",
+      "  \"company\": null,\r\n",
+      "  \"blog\": \"\",\r\n",
+      "  \"location\": \"Vancouver, BC\",\r\n",
+      "  \"email\": null,\r\n",
+      "  \"hireable\": null,\r\n",
+      "  \"bio\": \"Recent graduate from UBC Master of Data Science. \\r\\nI would like to use my newly acquired skills to make the world a greener place.\",\r\n",
+      "  \"twitter_username\": null,\r\n",
+      "  \"public_repos\": 21,\r\n",
+      "  \"public_gists\": 0,\r\n",
+      "  \"followers\": 5,\r\n",
+      "  \"following\": 1,\r\n",
+      "  \"created_at\": \"2018-08-22T01:19:27Z\",\r\n",
+      "  \"updated_at\": \"2021-03-02T16:47:39Z\"\r\n",
+      "}\r\n"
+     ]
+    }
+   ],
    "source": [
-    "# !curl https://api.github.com/users/sedv8808"
+    "!curl https://api.github.com/users/sedv8808"
    ]
   },
   {
@@ -825,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -838,7 +889,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
