--- a/W02D1/W02D1_SQL.ipynb
+++ b/W02D1/W02D1_SQL.ipynb
@@ -12,7 +12,7 @@
     "### W02D1 SQL\n",
     "\n",
     "Instructor: Socorro Dominguez  \n",
-    "March 08, 2021"
+    "May 03, 2021"
    ]
   },
   {
@@ -41,9 +41,7 @@
     }
    },
    "source": [
-    "Download Notebook using: https://downgit.github.io/#/home\n",
-    "\n",
-    "Link to download: https://github.com/sedv8808/LighthouseLabs/tree/main/W02D1"
+    "[Directory Link](https://downgit.github.io/#/home?url=https://github.com/sedv8808/LighthouseLabs/tree/main/W02D1)"
    ]
   },
   {
@@ -114,7 +112,7 @@
    "source": [
     "### Challenges when writing SQL\n",
     "\n",
-    "- Declarative (SQL) vs. imperative (Python). Basically, no control flow\n",
+    "- Declarative (SQL) vs. imperative/algorithmic (Python). Basically, no control flow\n",
     "- Long, nested queries with many variable names\n",
     "    - Vs. imperative programming where most readable programs break logic up into multiple steps\n",
     "- Many things happening concurrently in a single statement, order not explicit\n",
@@ -300,6 +298,36 @@
     }
    },
    "source": [
+    "## Exercise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Things we will be doing:\n",
+    "- Creating a PostgreSQL database using the psql shell tool.\n",
+    "- Importing existing data to fill the database (the drinks.sql file in this repository)\n",
+    "- Using the psycopg2 Python package to interact with the database (we could have alternatively used a dedicated SQL IDE like SQL Workbench, PgAdmin)\n",
+    "- Quering the database to explore SQL concepts such as:\n",
+    "    - Filtering, ordering, limiting, etc.\n",
+    "    - Joining tables\n",
+    "    - Grouping records\n",
+    "    - Aggregate functions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Make sure you've installed Postgres...\n",
     "\n",
     "1. Install PostGreSQL: https://www.datacamp.com/community/tutorials/installing-postgresql-windows-macosx\n",
@@ -323,6 +351,25 @@
     }
    },
    "source": [
+    "#### Creating the database using psql\n",
+    "1. Start up your terminal.\n",
+    "2. Start the psql shell tool. \\ psql\n",
+    "3. List the PostgreSQL databases that exist on your computer (press \"q\" when you want to exit the list view).  \n",
+    "`\\l`\n",
+    "4. Create a new empty database called \"drinks\".   \n",
+    "`CREATE DATABASE drinks;`\n",
+    "5. Confirm that the \"drinks\" database was created (press \"q\" when you want to exit the list view).   \n",
+    "`\\l`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "To write to a database:\n",
     "\n",
     "(You will need the `drinks.sql` file in the same directory as this notebook)"
@@ -330,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -400,57 +447,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Things we will be doing:\n",
-    "- Creating a PostgreSQL database using the psql shell tool.\n",
-    "- Importing existing data to fill the database (the drinks.sql file in this repository)\n",
-    "- Using the psycopg2 Python package to interact with the database (we could have alternatively used a dedicated SQL IDE like SQL Workbench, PgAdmin)\n",
-    "- Quering the database to explore SQL concepts such as:\n",
-    "    - Filtering, ordering, limiting, etc.\n",
-    "    - Joining tables\n",
-    "    - Grouping records\n",
-    "    - Aggregate functions\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "\n",
-    "#### Requirements:\n",
-    "- Install PostgreSQL (and potentially give the postgres user a password)\n",
-    "- Install the psycopg2 Python package in your anaconda virtual environment of choice. Note: you will need to install other dependencies beforehand. Look up which ones for your operating system.\n",
-    "    - Using conda: conda install -c anaconda psycopg2\n",
-    "    - Using pip: pip install psycopg2\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Creating the database using psql\n",
-    "- Start up your terminal.\n",
-    "- Start the psql shell tool. \\ psql\n",
-    "- List the PostgreSQL databases that exist on your computer (press \"q\" when you want to exit the list view). \\ \\l\n",
-    "- Create a new empty database called \"drinks\". \\ CREATE DATABASE drinks;\n",
-    "- Confirm that the \"drinks\" database was created (press \"q\" when you want to exit the list view). \\ \\l\n",
-    "- We can now leave the psql tool. \\ exit\n",
-    "- And also log out of the \"postgres\" user. \\ exit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -462,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -479,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -541,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +550,7 @@
        " ('person 1', '2016-10-22', 'bar 19', 'drink 42', 2)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -678,7 +674,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42    2"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +770,7 @@
        "4  person 1  2016-10-22  bar 19  drink 42         2"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +967,7 @@
        "[64 rows x 5 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1101,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1110,7 +1106,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1184,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true,
     "slideshow": {
@@ -1198,7 +1194,7 @@
        "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,13 +1266,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "query= \"\"\"\n",
@@ -1348,9 +1355,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "query= \"\"\"\n",
@@ -1419,13 +1437,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nquery= \"\"\"\\n\"\"\"\\n\\nexecute_query(query)\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "'''\n",
     "query= \"\"\"\n",
@@ -1448,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -1456,7 +1485,7 @@
    },
    "outputs": [],
    "source": [
-    "query.close()"
+    "#query.close()"
    ]
   },
   {
